tests/ui/feature-gates/issue-43106-gating-of-builtin-attrs-error.stderr
error[E0658]: the `#[rustc_main]` attribute is used internally to specify test entry point function
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:14:1
   |
LL | #![rustc_main]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: valid forms for the attribute are `#[inline]` and `#[inline(always|never)]`
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:44:5
   |
LL |     #[inline = "2100"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(ill_formed_attribute_input)]` on by default

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:30:1
   |
LL |   #[inline]
   |   ^^^^^^^^^
LL |
LL | / mod inline {
...  |
LL | | }
   | |_- not a function or closure

error: attribute should be applied to an `extern crate` item
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:63:1
   |
LL |   #[no_link]
   |   ^^^^^^^^^^
LL |
LL | / mod no_link {
LL | |
LL | |
LL | |     mod inner { #![no_link] }
...  |
LL | | }
   | |_- not an `extern crate` item

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:89:1
   |
LL |   #[export_name = "2200"]
   |   ^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / mod export_name {
LL | |
LL | |
LL | |     mod inner { #![export_name="2200"] }
...  |
LL | | }
   | |_- not a free function, impl method or static

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:123:8
   |
LL |   #[repr(C)]
   |          ^
LL |
LL | / mod repr {
LL | |
LL | |     mod inner { #![repr(C)] }
...  |
LL | | }
   | |_- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:147:8
   |
LL |   #[repr(Rust)]
   |          ^^^^
LL |
LL | / mod repr_rust {
LL | |
LL | |     mod inner { #![repr(Rust)] }
...  |
LL | | }
   | |_- not a struct, enum, or union

error: attribute should be applied to an `extern crate` item
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:24:1
   |
LL | #![no_link]
   | ^^^^^^^^^^^ not an `extern crate` item

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:26:1
   |
LL | #![export_name = "2200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ not a free function, impl method or static

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:28:1
   |
LL | #![inline]
   | ^^^^^^^^^^ not a function or closure

error: `macro_export` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:12:1
   |
LL | #![macro_export]
   | ^^^^^^^^^^^^^^^^
...
LL | mod inline {
   |     ------ the inner attribute doesn't annotate this module
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![macro_export]
LL + #[macro_export]
   |

error: `rustc_main` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:14:1
   |
LL | #![rustc_main]
   | ^^^^^^^^^^^^^^
...
LL | mod inline {
   |     ------ the inner attribute doesn't annotate this module
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![rustc_main]
LL + #[rustc_main]
   |

error: `path` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:19:1
   |
LL | #![path = "3800"]
   | ^^^^^^^^^^^^^^^^^
...
LL | mod inline {
   |     ------ the inner attribute doesn't annotate this module
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![path = "3800"]
LL + #[path = "3800"]
   |

error: `automatically_derived` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:21:1
   |
LL | #![automatically_derived]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | mod inline {
   |     ------ the inner attribute doesn't annotate this module
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![automatically_derived]
LL + #[automatically_derived]
   |

error: `repr` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:17:1
   |
LL | #![repr()]
   | ^^^^^^^^^^
...
LL | mod inline {
   |     ------ the inner attribute doesn't annotate this module
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![repr()]
LL + #[repr()]
   |

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:40:17
   |
LL |     mod inner { #![inline] }
   |     ------------^^^^^^^^^^-- not a function or closure

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:50:5
   |
LL |     #[inline] struct S;
   |     ^^^^^^^^^ --------- not a function or closure

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:54:5
   |
LL |     #[inline] type T = S;
   |     ^^^^^^^^^ ----------- not a function or closure

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:58:5
   |
LL |     #[inline] impl S { }
   |     ^^^^^^^^^ ---------- not a function or closure

error: attribute should be applied to an `extern crate` item
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:68:17
   |
LL |     mod inner { #![no_link] }
   |     ------------^^^^^^^^^^^-- not an `extern crate` item

error: attribute should be applied to an `extern crate` item
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:72:5
   |
LL |     #[no_link] fn f() { }
   |     ^^^^^^^^^^ ---------- not an `extern crate` item

error: attribute should be applied to an `extern crate` item
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:76:5
   |
LL |     #[no_link] struct S;
   |     ^^^^^^^^^^ --------- not an `extern crate` item

error: attribute should be applied to an `extern crate` item
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:80:5
   |
LL |     #[no_link]type T = S;
   |     ^^^^^^^^^^----------- not an `extern crate` item

error: attribute should be applied to an `extern crate` item
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:84:5
   |
LL |     #[no_link] impl S { }
   |     ^^^^^^^^^^ ---------- not an `extern crate` item

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:94:17
   |
LL |     mod inner { #![export_name="2200"] }
   |     ------------^^^^^^^^^^^^^^^^^^^^^^-- not a free function, impl method or static

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:100:5
   |
LL |     #[export_name = "2200"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ --------- not a free function, impl method or static

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:104:5
   |
LL |     #[export_name = "2200"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ----------- not a free function, impl method or static

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:108:5
   |
LL |     #[export_name = "2200"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ---------- not a free function, impl method or static

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:113:9
   |
LL |         #[export_name = "2200"] fn foo();
   |         ^^^^^^^^^^^^^^^^^^^^^^^ --------- not a free function, impl method or static

error: attribute should be applied to a free function, impl method or static
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:117:9
   |
LL |         #[export_name = "2200"] fn bar() {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^ ----------- not a free function, impl method or static

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:127:25
   |
LL |     mod inner { #![repr(C)] }
   |     --------------------^---- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:131:12
   |
LL |     #[repr(C)] fn f() { }
   |            ^   ---------- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:137:12
   |
LL |     #[repr(C)] type T = S;
   |            ^   ----------- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:141:12
   |
LL |     #[repr(C)] impl S { }
   |            ^   ---------- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:151:25
   |
LL |     mod inner { #![repr(Rust)] }
   |     --------------------^^^^---- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:155:12
   |
LL |     #[repr(Rust)] fn f() { }
   |            ^^^^   ---------- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:161:12
   |
LL |     #[repr(Rust)] type T = S;
   |            ^^^^   ----------- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/issue-43106-gating-of-builtin-attrs-error.rs:165:12
   |
LL |     #[repr(Rust)] impl S { }
   |            ^^^^   ---------- not a struct, enum, or union

error: aborting due to 38 previous errors

Some errors have detailed explanations: E0517, E0518, E0658.
For more information about an error, try `rustc --explain E0517`.
